--- a/app/@core/solidForm/baseInputs/stylesCheckboxRadio.css
+++ b/app/@core/solidForm/baseInputs/stylesCheckboxRadio.css
@@ -48,7 +48,12 @@
     bottom: -4px;
     left: -4px;
     content: '';
-    border: 2px solid $focusColor;
+
+    @if $THEME == galaxus {
+      border: 2px solid $blackAlpha15;
+    } @else {
+      border: 2px solid $allports2;
+    }
   }
 }
 
