--- a/app/@components/styleguide/styles.css
+++ b/app/@components/styleguide/styles.css
@@ -38,8 +38,8 @@
 
 .styleguide {
   height: auto;
-  border: $spacingBig solid $dustyGray;
   background: $white;
+  padding-top: $spacingBig;
 }
 
 .content {
